test/should-fail/赋值错误-1.j
function test takes nothing returns nothing
    local integer i
    call i = 1
endfunction